src/core-crm/objects/Engagement_List_Configuration__c/Engagement_List_Configuration__c.object-meta.xml
<CustomObject>
    <description>Contains the details of a call/outreach campaign.</description>
    <label>Engagement List Configuration</label>
    <nameField>
        <label>Engagement List Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement List Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>