src/core-crm/objects/Engagement_List_Configuration__c/fields/Briefing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Notes__c</fullName>
    <description>Briefing notes to guide the partners on calls</description>
    <label>Briefing Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>