src/core-crm/objects/Engagement_List_Configuration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief description of the engagement list configuration</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>