src/core-crm/objects/Engagement_List_Configuration__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <description>The email template to be used for email messages and communications</description>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>