src/core-crm/objects/Engagement_List_Configuration__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date the engagement list configuration was deactivated</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>