src/core-crm/objects/Engagement_List_Configuration__c/fields/Engagement_List_Configuration_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_List_Configuration_Status__c</fullName>
    <description>The status of engagement list configuration in its life cycle</description>
    <label>Engagement List Configuration  Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft (Default)</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>