src/core-crm/objects/Engagement_List_Configuration__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used by integration for data provenance</description>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>