src/core-crm/objects/Engagement_List_Configuration__c/fields/Max_Number_Of_Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_Of_Call_Attempts__c</fullName>
    <description>The number call attempts to the student the caller should make before closing the case</description>
    <label>Max Number Of Call Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>