src/core-crm/objects/Engagement_List_Configuration__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used by migration framework for data movement</description>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>