src/core-crm/objects/Engagement_List_Configuration__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>The purpose of the engagement list configuration to complement the description</description>
    <label>Purpose</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>