src/core-crm/objects/Engagement_List_Configuration__c/fields/Qualtrics_Instrument_ID__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Instrument_ID__c</fullName>
    <description>An external identifier of the Qualtrics instrument (survey ID) to be used by integration</description>
    <label>Qualtrics Instrument ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>