src/core-crm/objects/Engagement_List_Configuration__c/fields/Qualtrics_Instrument_Name__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Instrument_Name__c</fullName>
    <description>The name of the Qualtrics instrument to be included with engagement list configuration for easy reference</description>
    <label>Instrument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>