src/core-crm/objects/Engagement_List_Configuration__c/fields/SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The SMS template to be used for SMS messages and communications</description>
    <label>SMS Template</label>
    <referenceTo>SMS_Template__c</referenceTo>
    <relationshipLabel>Engagement List Configurations</relationshipLabel>
    <relationshipName>Engagement_List_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>