src/core-crm/objects/Engagement_List_Configuration__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date the engagement list configuration comes into effect</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>