src/core-crm/objects/Engagement_List_Configuration__c/validationRules/End_date_is_before_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_is_before_start_date</fullName>
    <active>true</active>
    <description>Validates end date if before start date</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be after Start Date.</errorMessage>
</ValidationRule>