src/core-crm/objects/Engagement_List_Configuration__c/validationRules/Qualtrics_Instrument_ID_Or_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualtrics_Instrument_ID_Or_Name_Required</fullName>
    <active>true</active>
    <description>Both Qualtrics Instrument ID and Instrument need to be set when either is set.</description>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED( Qualtrics_Instrument_ID__c ),
ISCHANGED( Instrument__c )
),
OR(
AND(NOT( ISBLANK( Qualtrics_Instrument_ID__c )),ISBLANK( Instrument__c )),
AND(NOT( ISBLANK( Instrument__c )),ISBLANK( Qualtrics_Instrument_ID__c ))
)
)</errorConditionFormula>
    <errorMessage>Both Qualtrics Instrument ID and Instrument need to be set when either is set.</errorMessage>
</ValidationRule>