src/core-crm/objects/Engagement_List_Configuration__c/validationRules/Start_date_is_after_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Is_After_End_Date</fullName>
    <active>true</active>
    <description>Validates start date if after end date</description>
    <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date must be before End Date.</errorMessage>
</ValidationRule>